--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: prestashop
+      MYSQL_DATABASE: satispay_prestashop
     networks:
       - satispay_prestashop_network
     volumes:
@@ -24,7 +24,7 @@ services:
       - 8080:80
     environment:
       DB_SERVER: satispay_prestashop-mysql
-      DB_NAME: prestashop
+      DB_NAME: satispay_prestashop
       DB_USER: root
       DB_PASSWD: admin
       PS_INSTALL_AUTO: 1
