--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 
-/docs export-ignore
-/scripts export-ignore
-/psdata export-ignore
+.git/ export-ignore
+tmp export-ignore
+docs/ export-ignore
+scripts/ export-ignore
+psdata/ export-ignore
